--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
+[metadata]
 name = simfit
 version = 0.4.0.0
 description = Tool for fitting multiple data simultaneously
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/johashei/simfit
-author = Johannes S. Heines
+author = Johannes Sørby Heines
 author_email = j.s.heines@fys.uio.no
 
 classifiers = 
@@ -15,6 +16,7 @@ classifiers =
     Operating System :: MacOS
     Programming Language :: Python :: 3.9
 
+[options]
 packages = 
     simfit
     tests
@@ -23,6 +25,5 @@ install_requires =
     numpy
     matplotlib
     iminuit
-    os
     pathlib
 
