--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = simfit
-version = 1.0.0.0
+name = multifit
+version = 1.0.0.1
 description = Tool for fitting multiple data simultaneously
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/johashei/simfit
+url = https://github.com/johashei/multifit
 author = Johannes Sørby Heines
 author_email = j.s.heines@fys.uio.no
 
@@ -12,13 +12,13 @@ classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Physics
-    Licence :: OSI Approved :: MIT License
+    License :: OSI Approved :: MIT License
     Operating System :: MacOS
     Programming Language :: Python :: 3.9
 
 [options]
 packages = 
-    simfit
+    multifit
     tests
 
 install_requires = 
