--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,14 @@
 [metadata]
 name = multifit
-version = 1.0.0.1
-description = Tool for fitting multiple data simultaneously
-long_description = file: README.md
-long_description_content_type = text/markdown
+version = 1.0.0.2
+description = Tool for fitting multiple data sets with shared parameters simultaneously
+long_description = The goal of Multifit is to provide a convenient way of calculating fits with shared parameters over multiple data sets. The actual fitting is all done using the iminuit package, and I recommend that you familiarise yourself with their basic tutorial at https://iminuit.readthedocs.io/en/stable/tutorial/basic_tutorial.html
 url = https://github.com/johashei/multifit
 author = Johannes Sørby Heines
 author_email = j.s.heines@fys.uio.no
 
 classifiers = 
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Physics
     License :: OSI Approved :: MIT License
