--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = multifit
-version = 1.0.2.0
+version = 2.0.0.0
 description = Tool for fitting multiple data sets with shared parameters simultaneously
 long_description = The goal of Multifit is to provide a convenient way of calculating fits with shared parameters over multiple data sets. The actual fitting is all done using the iminuit package, and I recommend that you familiarise yourself with their basic tutorial at https://iminuit.readthedocs.io/en/stable/tutorial/basic_tutorial.html
 url = https://github.com/johashei/multifit
 author = Johannes Sørby Heines
-author_email = j.s.heines@fys.uio.no
+author_email = j.s.heines@protonmail.ch
 
 classifiers = 
     Development Status :: 5 - Production/Stable
